<resources>
    <string name="app_name">Venus</string>
    <string name="motto">当你有使命，它会让你更专注</string>
    <string name="shebao_title">四川省社保服务网点查询</string>
    <string name="lottory_default_value">00</string>
    <string name="logout">退出当前账号</string>
    <string name="about">婷宇数字科技有限责任公司</string>
    <string name="settings">设置</string>
    <string name="login">用户登录</string>
    <string name="register">注册</string>
    <string name="shebao">社保服务</string>
    <string name="movie">家庭影院</string>
    <string name="lottory">在线选号</string>
    <string name="map">地图服务</string>
    <string name="light_sensor">光线传感器</string>
    <string name="music">点歌</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_label">关于</string>
    <string name="wellcome">欢迎使用婷宇科技APP</string>
    <string name="login_username">用户名：</string>
    <string name="login_pwd">密    码：</string>
    <string name="login_login">登录</string>
    <string name="login_register">注册</string>
    <string name="me_phone">手机号</string>

</resources>