<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   >

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="240dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/venus_logo"/>

    </LinearLayout>

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_username"
            />
        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="手机号"
            android:textAllCaps="false"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_pwd"
            />
        <EditText

            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="密码"
            android:inputType="textPassword"
            android:textAllCaps="false"

            />


    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">


        <Button
            android:id="@+id/btn_login_login"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/login_login"
            android:textColor="#FFFFFF"
            android:background="#FF009688"
            android:textAllCaps="false"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"

            />
        <Button
            android:id="@+id/btn_login_register"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:text="@string/login_register"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            />

    </LinearLayout>


</LinearLayout>